# AirSynth

./: LICENSE  README.md  pyproject.toml
src/: config.py  main.py  player.py  utils.py
