[tool.poetry]
name = "air_synth"
version = "0.1.0"
description = "App for playing Synthesizer/Piano in the air (AR)"
authors = ["pcrncec <rnecpatrik95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
pygame = "^2.1.2"
mediapipe = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
